@@ -7,9 +7,10 @@ v?.?.???       ???-??-??
   - renamed -color to -kmlcolor
   - removed -label
   - added #!/usr/bin/perl to ghch_fetch.pl
+  - removed the file extension in the bin scripts for proper Windows and *nix deployment
 
 v0.0.006       2022-10-16
-  - fix for ticket 144693 "Can't open ghcn_fetch.pl"
+  - fix for ticket 144693 "Can't open ghcn_fetch"
   - fixes for test failures in CacheURI.t arising on systems without internet access
 
 
